--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
             <version>5.3.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.0.3</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
         <properties>
