--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
             <version>5.3.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.3.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
         <properties>
             <maven.compiler.source>1.8</maven.compiler.source>
